2006-12-23  Inge Wallin  <inge@lysator.liu.se>

	Fourth step, part 5a of wish 117960
	Put the config dialog in dialogs/
	* Move:
	kchartParameter3dConfigPage  -->  dialogs/KCConfigSubtypeBarPage
	
	----------------------------------------------------------------

	Fourth step, part 4 of wish 117960
	Put the config dialog in dialogs/
	* Move:
	kchartHeaderFooterConfigPage  -->  dialogs/KCConfigHeaderFooterPage

2006-12-22  Inge Wallin  <inge@lysator.liu.se>

	Fourth step, part 3 of wish 117960
	Put the config dialog in dialogs/
	* Move:
	kchartLegendConfigPage  -->  dialogs/KCConfigLegendPage

2006-12-21  Inge Wallin  <inge@lysator.liu.se>

	Fourth step, part 2 of wish 117960
	Put the config dialog in dialogs/
	* Move:
	kchartParameterConfigPage  -->  dialogs/KCConfigAxesPage
	kchartColorConfigPage      -->  dialogs/KCConfigColorPage
	kchartFontConfigPage       -->  dialogs/KCConfigFontPage

2006-12-21  Inge Wallin  <inge@lysator.liu.se>

	Fourth step, part 1 of wish 117960
	Put the config dialog in dialogs/
	* Move:
	kchartConfigDialog                -->  dialogs/KCConfigDialog
	kchartDataConfigPage              -->  dialogs/KCConfigDataPage
	kchartSubTypeChartPage            -->  dialogs/KCConfigSubtypePage
	kchartBackgroundPixmapConfigPage  -->  dialogs/KCConfigBackgroundPage

2006-12-20  Inge Wallin  <inge@lysator.liu.se>

	Third step of wish 117960
	* Move the printer dialog to dialogs/

2006-12-17  Inge Wallin  <ingwa@c83-252-239-226.bredband.comhem.se>

	Second step of wish 117960
	* Move the page layout dialog to dialogs/

2006-12-10  Inge Wallin  <ingwa@c83-252-232-192.bredband.comhem.se>

	First step of wish 117960: (code structure): put the wizard and
	config dialog in a "dialogs" subdirectory
	* Created subdirectory dialogs/ and moved the wizard to it.

2006-11-06  Inge Wallin  <inge@lysator.liu.se>

	Fix  bug 128758: misinterpretation of the checkbox "first row as label"
	* kchart_part.cc (createLabelsAndLegend): Pass parameters as
	references.
